fixup! console: Fix collapse component styles

--- a/pkg/webui/console/views/device-general-settings/collapse/collapse.styl
+++ b/pkg/webui/console/views/device-general-settings/collapse/collapse.styl
@@ -13,12 +13,7 @@
 // limitations under the License.
 
 .section
-  border-normal('top')
-
-  &.disabled
-    .title,
-    .description
-      opacity: 0.7
+  border-normal('bottom')
 
 .header
   display: block
